--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fcharts: ^0.0.11
   firebase_core: ^2.6.1
   cloud_firestore: ^4.4.3
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
