--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  fcharts: ^0.0.11
   firebase_core: ^2.6.1
   cloud_firestore: ^4.4.3
   uuid: ^3.0.7
+  charts_flutter_new: ^0.12.0
+  text_scroll: ^0.2.0
 
 dev_dependencies:
   flutter_test:
