--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^3.0.7
   charts_flutter_new: ^0.12.0
   text_scroll: ^0.2.0
+  firebase_auth: ^4.4.1
 
 dev_dependencies:
   flutter_test:
