--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   charts_flutter_new: ^0.12.0
   text_scroll: ^0.2.0
   firebase_auth: ^4.4.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
